# aws-add-ip-to-security-group-action

./: Dockerfile  README.md  action.yaml  catalog-info.yaml  cleanup.sh  setup.cfg
.github/workflows/: manual_check.yaml  release.yaml
action/: cleanup.py  ipconfig.py  logger.py  start.py
requirements/: check.txt  run.txt  test.txt
tests/: test_add_revoke.py  test_ipconfig.py  test_start.py
