[metadata]
name = aws-add-ip-to-security-group-action
author = Vinicius Schettino
author-email = vinicius.schettino@passeidireto.com
summary = 'Add a TCP Ingress rule to a AWS Security Group and cleans up after the workflow is done.'
home-page = https://github.com/PasseiDireto/aws-add-ip-to-security-group-action
long-description = file: README.md
long_description_content_type = text/markdown

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[tool:pytest]
testpaths=tests

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
exclude=__init__.py

[mypy]
files=action
ignore_missing_imports=true